# jobs-dps-jupyter-extension

./: .gitignore  .npmrc  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
@types/: react-table-config.d.ts
src/: JobStatus.tsx  JobsDetails.tsx  JobsInputs.tsx  JobsMetrics.tsx  JobsOverview.tsx  JobsSubmit.tsx  JobsView.tsx  JobsWidget.tsx  constants.tsx  handler.ts  index.ts  types.ts  utils.tsx
style/: index.js  jobs.css
